# csshw

./: .coverage-ignore-regex  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  build.rs  changelogging.toml  paseo.json  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/commit/: SKILL.md
.claude/skills/github-pr/: SKILL.md
.clinerules/: development-patterns.md  project-context.md  rules.md  windows-specifics.md
.githooks/: pre-commit
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup_rust/: action.yml
.github/workflows/: _coverage-report.yml  _setup_rust.yml  _shared-ci.yml  ci-coverage.yml  ci.yml  delete-merged-branches.yml  dependabot-auto-merge.yml  deploy_docs.yml  deploy_github_pages.yml  meta-check.yml  news-fragment-check.yml  post-pr-comment.yml  post-submit.yml  pre-submit.yml  release.yml  rust.yml  sync-labels.yml
.github/workflows/_coverage_report/: action.yml
.paseo/: README.md
changes/: ~setup.feature.md
data/actions/: coverage.xml
data/add-cli-tests/: coverage.xml
data/add-client-tests/: coverage.xml
data/add-lib-tests/: coverage.xml
data/add-utils-tests/: coverage.xml
data/cli-tests/: coverage.xml
data/client-windows-trait/: coverage.xml
data/coverage/: coverage.xml
data/create_process/: coverage.xml
data/daemon-win-api/: coverage.xml
data/daemon-workspace-test/: coverage.xml
data/diff/: coverage.xml
data/diff-cover/: coverage.xml
data/format-toml/: coverage.xml
data/format-yaml/: coverage.xml
data/ignore-files-from-coverage/: coverage.xml
data/integration-tests/: coverage.xml
data/main/: coverage.xml
data/makefile/: coverage.xml
data/move-tests/: coverage.xml
data/no-capture/: coverage.xml
data/refactor-windows/: coverage.xml
data/retention-days/: coverage.xml
data/social-preview/: coverage.xml
data/test-coverage/: coverage.xml
data/unify-windows-api/: coverage.xml
data/utils-tests/: coverage.xml
data/windows-api/: coverage.xml
data/windows-module/: coverage.xml
data/workflow/: coverage.xml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/csshw/: all.html  constant.PKG_NAME.html  enum.Commands.html  fn.main.html  fn.resolve_cluster_tags.html  index.html  sidebar-items.js  struct.Args.html
docs/csshw_lib/: all.html  constant.CLSID_CONHOST.html  constant.CLSID_DEFAULT.html  constant.DEFAULT_TERMINAL_APP_REGISTRY_PATH.html  constant.DELEGATION_CONSOLE.html  constant.DELEGATION_TERMINAL.html  fn.enumerate_callback.html  fn.enumerate_windows.html  fn.get_concole_window_handle.html  fn.get_reg_key.html  fn.get_registry_value.html  fn.init_logger.html  fn.spawn_console_process.html  fn.write_registry_values.html  index.html  sidebar-items.js  struct.WindowsSettingsDefaultTerminalApplicationGuard.html
docs/csshw_lib/cli/: constant.PKG_NAME.html  enum.Commands.html  fn.entrypoint.html  fn.resolve_cluster_tags.html  index.html  sidebar-items.js  struct.Args.html
docs/csshw_lib/client/: enum.ReadWriteResult.html  fn.get_username_and_host.html  fn.launch_ssh_process.html  fn.main.html  fn.read_write_loop.html  fn.run.html  fn.write_console_input.html  index.html  sidebar-items.js
docs/csshw_lib/daemon/: constant.SENDER_CAPACITY.html  enum.ControlModeState.html  fn.arrage_client_window.html  fn.arrange_client_window.html  fn.defer_windows.html  fn.determine_client_spatial_attributes.html  fn.ensure_client_z_order_in_sync_with_daemon.html  fn.focus_window.html  fn.get_console_rect.html  fn.get_console_window_wrapper.html  fn.get_foreground_window_wrapper.html  fn.launch_client_console.html  fn.launch_clients.html  fn.main.html  fn.named_pipe_server_routine.html  fn.resolve_cluster_tags.html  fn.toggle_processed_input_mode.html  index.html  sidebar-items.js  struct.ClientWindow.html  struct.Daemon.html  struct.HWNDWrapper.html
docs/csshw_lib/serde/: constant.SERIALIZED_INPUT_RECORD_0_LENGTH.html  index.html  sidebar-items.js
docs/csshw_lib/utils/: constant.KEY_EVENT.html  fn.arrange_console.html  fn.clear_screen.html  fn.get_console_input_buffer.html  (+13 more)
news/: 157.feature.md  168.feature.md  172.feature.md  181.feature.md  184.bugfix.md  189.bugfix.md  193.bugfix.md  195.feature.md  196.bugfix.md  197.bugfix.md  200.feature.md  201.feature.md  202.feature.md  210.bugfix.md  42.feature.md  69.feature.md  ~changelogging-order.bugfix.md  ~conhost-stale-cells-on-win11.bugfix.md  ~prepare-release-minor-pr.bugfix.md  ~setup.feature.md  ~spawn-current-exe.bugfix.md  ~submenu-2d-grid-nav.feature.md
res/: csshw.rc  csshw_daemon.rc
src/: cli.rs  deserialization.rs  follower.rs  leader.rs  lib.rs  main.rs  protocol.rs
src/client/: main.rs  mod.rs
src/daemon/: client_registry.rs  grid.rs  main.rs  mod.rs  workspace.rs
src/launcher/: main.rs
src/protocol/: deserialization.rs  mod.rs  serialization.rs
src/serde/: deserialization.rs  mod.rs  serialization.rs
src/tests/: test_cli.rs  test_client.rs  test_daemon.rs  test_lib.rs  test_serde.rs
src/utils/: config.rs  constants.rs  debug.rs  mod.rs  named_pipe.rs  windows.rs
templates/: github-pages-index.html  release_template.md  social-preview.html
xtask/: Cargo.toml
xtask/demo-assets/: sandbox-bootstrap.ps1  setup-desktop.ps1
xtask/demo-assets/carnac/: LICENSE  README.md
xtask/social-preview/: README.md  generate.mjs  package-lock.json  package.json
xtask/src/: changelog.rs  coverage.rs  inject_agent_token.rs  main.rs  readme.rs  release.rs  social_preview.rs  typography.rs
xtask/src/demo/: bin.rs  config_override.rs  driver.rs  dsl.rs  mod.rs  recorder.rs  script.rs  windows_input.rs
xtask/src/demo/env/: local.rs  mod.rs  sandbox.rs
xtask/src/tests/: test_changelog.rs  test_coverage.rs  test_demo_bin.rs  test_demo_config_override.rs  test_demo_driver.rs  test_demo_dsl.rs  test_demo_env_sandbox.rs  test_demo_mod.rs  test_demo_recorder.rs  test_demo_script.rs  test_inject_agent_token.rs  test_readme.rs  test_release.rs  test_social_preview.rs  test_typography.rs
(+88 files in other folders)
