[package]
name = "csshw"
version = "0.15.2"
edition = "2021"
license-file = "LICENSE.txt"
default-run = "csshw"

[[bin]]
name = "csshw"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.26", features = ["derive"] }
cli-clipboard = "0.4.0"
itertools = "0.12.1"
log = "0.4.21"
log-panics = "2.1.0"
os_info = { version="3.7.0", default-features = false }
registry = "1.3.0"
rmp = "0.8.11"
serde = "1.0.163"
serde_derive = "1.0.163"
simplelog = "0.12.2"
ssh2-config = "0.2.3"
time = "0.3.36"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "signal", "process"] }

[dependencies.confy]
version = "0.5.1"
features = ["toml_conf"]
default-features = false

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "UI_UIAutomation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
embed-resource = "2.2"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
