[package]
name = "csshw"
version = "0.18.1"
edition = "2021"
license-file = "LICENSE.txt"
default-run = "csshw"

[lib]
name = "csshw_lib"

[[bin]]
name = "csshw"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracoxide = "0.1.5"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
cli-clipboard = "0.4.0"
log = "0.4.25"
log-panics = "2.1.0"
os_info = { version="3.9.2", default-features = false }
registry = "1.3.0"
serde = "1.0.217"
serde_derive = "1.0.217"
simplelog = "0.12.2"
ssh2-config = "0.3.0"
time = "0.3.37"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "signal", "process"] }

[dependencies.confy]
version = "0.6.1"
features = ["toml_conf"]
default-features = false

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "UI_UIAutomation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
]

[dev-dependencies]
mockall = "0.13.1"
cargo-make = "0.37.22"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
