[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Shared: CLI parsing, error handling, TOML editing, semver bumps.
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
toml_edit = "0.21"
semver    = "1.0"

[dev-dependencies]
mockall = "0.13"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
