[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Shared: CLI parsing, error handling, TOML editing, semver bumps.
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
toml_edit = "0.21"
semver    = "1.0"
# Demo subcommand (record-demo): regex-based window matching.
regex     = "1"

# Demo subcommand: Windows input synthesis (SendInput) and window
# enumeration. Pinned to the same major version csshw_lib uses
# (Cargo.toml at the workspace root) so we share a compiled copy.
[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
mockall = "0.13"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
